# janus-client-python

./: README.md  app.py  janus.py  janus_client_script.py  pyproject.toml  videoCall.py  videoCall2.py
bkp_venv/: pyvenv.cfg
templates/: index.html
